move common code to common.c/h

--- a/nmsgpcnt/Makefile
+++ b/nmsgpcnt/Makefile
@@ -1,12 +1,12 @@
 CFLAGS += -Wall -Werror -g -O0 -Isrc/ -I.
-NMSGPCNTSRC = nmsgpcnt-npb.c src/nmsg.pb.c src/pb_decode.c src/pb_common.c
+NMSGPCNTSRC = nmsgpcnt-npb.c src/nmsg.pb.c src/pb_decode.c src/pb_common.c common.c
 
 all: nmsgpcnt-fsi nmsgpcnt-ptc nmsgpcnt-npb
 nmsgpcnt-fsi:
-	gcc $(CFLAGS) -Wall nmsgpcnt-fsi.c -o nmsgpcnt-fsi
+	gcc $(CFLAGS) -Wall nmsgpcnt-fsi.c common.c -o nmsgpcnt-fsi
 nmsgpcnt-ptc: 
-	gcc $(CFLAGS) -Wall nmsgpcnt-ptc.c src/nmsg.pb-c.c -o nmsgpcnt-ptc -lprotobuf-c
+	gcc $(CFLAGS) -Wall nmsgpcnt-ptc.c common.c src/nmsg.pb-c.c -o nmsgpcnt-ptc -lprotobuf-c
 nmsgpcnt-npb: $(NMSGPCNTSRC) 
-	$(CC) $(CFLAGS) -onmsgpcnt-npb $(NMSGPCNTSRC)
+	gcc $(CFLAGS) -onmsgpcnt-npb $(NMSGPCNTSRC)
 clean:
-	rm -rf *.o nmsgpcnt-npb *.dSYM nmsgpcnt-fsi nmsgpcnt-ptc
+	rm -rf *.o *.dSYM nmsgpcnt-npb nmsgpcnt-fsi nmsgpcnt-ptc
